Search filtering initialization